--- a/templates/conventions/common/form_foyer_residence_logements.html
+++ b/templates/conventions/common/form_foyer_residence_logements.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 {% load custom_filters %}
 
 <div class="fr-grid-row fr-grid-row--gutters">
@@ -108,5 +110,6 @@
     </div>
 </div>
 
+<script type="text/javascript" src="{% static "js/logements-table.js" %}" nonce="{{request.csp_nonce}}"></script>
 
 {% include "common/required_fields_info.html" %}
