--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -75,6 +75,7 @@
                         {% include "conventions/recapitulatif/financement.html" with target_url='conventions:financement' %}
                     {% endif %}
                     {% include "conventions/recapitulatif/logements.html" with target_url='conventions:logements' %}
+                    {% include "conventions/recapitulatif/foyer_residence_logements.html" with target_url='conventions:foyer_residence_logements' %}
                     {%  if not ecolo_ref %}
                         {% include "conventions/recapitulatif/annexes.html" with target_url='conventions:annexes' %}
                     {% else %}
@@ -105,7 +106,7 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="{% static "js/recap-logements-table.js" %}" nonce="{{request.csp_nonce}}"></script>
+        <script type="text/javascript" src="{% static "js/logements-table.js" %}" nonce="{{request.csp_nonce}}"></script>
 
     {% endwith %}
 {% endblock %}
