--- a/templates/conventions/recapitulatif/operation.html
+++ b/templates/conventions/recapitulatif/operation.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-{% if convention_form_steps|is_a_step:'Opération' %}
+{% if convention_form_steps|is_a_step:'ConventionProgrammeView' %}
     <div class="fr-grid-row fr-grid-row--gutters fr-mt-1w">
         <div class="fr-col-12 fr-col-lg-6">
             <div class="fr-card fr-card--no-arrow">
