--- a/templates/conventions/recapitulatif/references_cadastrales.html
+++ b/templates/conventions/recapitulatif/references_cadastrales.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-{% if convention_form_steps|is_a_step:'Cadastre' %}
+{% if convention_form_steps|is_a_step:'ConventionCadastreView' %}
     <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-12 fr-col-lg-12">
             <div class="fr-card fr-card--no-arrow">
