--- a/templates/conventions/recapitulatif/stationnements.html
+++ b/templates/conventions/recapitulatif/stationnements.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-{% if convention_form_steps|is_a_step:'Stationnement' %}
+{% if convention_form_steps|is_a_step:'ConventionTypeStationnementView' %}
     <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-12 fr-col-lg-12">
             <div class="fr-card fr-card--no-arrow">
