--- a/templates/conventions/recapitulatif/variantes.html
+++ b/templates/conventions/recapitulatif/variantes.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-{% if convention_form_steps|is_a_step:'Variantes' %}
+{% if convention_form_steps|is_a_step:'ConventionFoyerVariantesView' %}
 
     <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-12 fr-col-lg-12">
