update: files for avenant

--- a/templates/conventions/avenant/form_avenants_for_avenant.html
+++ b/templates/conventions/avenant/form_avenants_for_avenant.html
@@ -11,11 +11,19 @@
             {% include "conventions/avenant/list_avenants_for_avenant.html" with conventions=avenants_parent %}
             <div class="fr-col-12">
                 <h2 class="fr-text--lg">Téléverser l'avenant {{avenant_numero}} </h2>
-                <form method="post">
+                <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
+                    <label class="fr-label" for="avenant_types">Sélectionner les types d'avenant {% include "common/form/required_field_star.html" %}</label>
                     {{avenant_form.avenant_types}}
-                    {{avenant_form.desc_avenant}}
-                    <button class="fr-btn fr-btn--secondary fr-icon-eye-line fr-btn--icon-left">Créer l'avenant</button>
+                    <label class="fr-label fr-mt-4w" for="desc_avenant">Vous pouvez décrire en quelques mots l'objet de cet avenant. {% include "common/form/required_field_star.html" %}</label>
+                    <textarea class="fr-input" name="desc_avenant" cols="40" rows="10" id="id_desc_avenant"></textarea>
+                    <div class="fr-upload-group fr-mt-5w">
+                        <label class="fr-label" for="file-upload">Téléverser l'avenant (en PDF) {% include "common/form/required_field_star.html" %}
+                            <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf</span>
+                        </label>
+                        <input class="fr-upload" type="file" id="file-upload" name="nom_fichier_signe" required>
+                    </div>
+                    <button class="fr-btn fr-btn--secondary fr-mt-3w">Créer l'avenant</button>
                 </form>
             </div>
         </div>
