--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -23,9 +23,12 @@
                                     <a class="fr-btn" href="{% url 'conventions:selection' %}">
                                         <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
                                     </a>
-                                    <a class="fr-btn fr-btn--secondary" href="{% url 'conventions:selection' %}">
+                                    {% comment %}
+                                    {#  Disable as there is no route to initialize avenant from zero yet #}
+                                    <a class="fr-btn fr-btn--secondary" href="{% url 'avenants:selection' %}">
                                         <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
                                     </a>
+                                    {% endcomment %}
                                 </div>
                             {% endif %}
                         {% elif request|is_instructeur or request.user.is_superuser %}
