S659 avenants conventions hors apilos (#423)
* init: templates for search

* update: pass parameters to filter the list

* update: add working form

* update: clean file

* update: init form for convention missing

* update: statut signed + integration

* integration search - result

* fix upload conventions + integration

* update: add numero de convention + test

* remove unnecessary print

* fix some integration issues

* init: new avenants form for avenant

* update: check if there is current avenant + init form to upload avenants

* update: add new service file + new field in model convention

* update for merge

* remove prints

* update: files for avenant

* Ecoloweb: corriger l'import des pièces jointes (#453)

* Fix wrong method override name

* Automatically promote convention piece jointe on post process

* Improve PieceJointe query by splitting id & financement

* Add datehistoriquedebut to convention composite ecolo id & ignore non courante conventions

* Use ConventionFileService if file uploaded on avenant from zero

* Secure route with require_GET

* update: add fiew test to improve coverage

Co-authored-by: Pierre Lemée <pierre.lemee@beta.gouv.fr>

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -215,8 +215,17 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
 .apilos-verbatim-text {
   font-size: 0.9rem;
 }
+.apilos-icon-success {
+  color: var(--background-action-high-success);
+}
+.apilos-overflow-hidden {
+  overflow: hidden;
+}
 .dropdown-menu.apilos-dropdown-menu {
   z-index: 100000;
+}
+.apilos-avenant_type:not(:last-child):after {
+  content: ", ";
 }
 
 .block--row-strech {
