--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -19,7 +19,7 @@
                                 <h1 class="m-0">Conventions et avenants</h1>
                             </div>
                             {% if not CERBERE_AUTH %}
-                                <div>
+                                <div class="fr-mr-3w">
                                     <a class="fr-btn" href="{% url 'conventions:selection' %}">
                                         <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
                                     </a>
@@ -31,6 +31,11 @@
                                     {% endcomment %}
                                 </div>
                             {% endif %}
+                            <div>
+                                <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
+                                    <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                                </a>
+                            </div>
                         {% elif request|is_instructeur or request.user.is_superuser %}
                             <div class="block--row-strech-1">
                                 <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
@@ -56,7 +61,7 @@
                     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
                         <div class="fr-my-5w">
                             <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>
+                                <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>
                                 {% if request|is_instructeur %}
                                     Créer une nouvelle convention comme un bailleur
                                 {% else %}
