--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -46,9 +46,15 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="fr-col-12 fr-grid-row fr-my-1w block--row-strech fr-grid-row--middle">
-                    {% include 'conventions/home/_tab.html' with tab_active=active count=nb_active_conventions label='en cours' title='Conventions en cours' route='conventions:search_active' %}
-                    {% include 'conventions/home/_tab.html' with tab_active=active|negate count=nb_completed_conventions label='finalisées' title='Conventions finalisées' route='conventions:search_completed' %}
+            </div>
+            <div class="fr-container-fluid">
+                <div class="fr-tabs fr-col-12">
+                    <div class="fr-container">
+                        <ul class="fr-tabs__list" role="tablist" aria-label="list convention">
+                            {% include 'conventions/home/_tab.html' with tab_active=active count=nb_active_conventions label='en cours' title='Conventions en cours' route='conventions:search_active' %}
+                            {% include 'conventions/home/_tab.html' with tab_active=active|negate count=nb_completed_conventions label='finalisées' title='Conventions finalisées' route='conventions:search_completed' %}
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
