update: remove blanck board on recap

--- a/templates/conventions/recapitulatif/stationnements.html
+++ b/templates/conventions/recapitulatif/stationnements.html
@@ -17,44 +17,51 @@
                             </a>
                         {% endif %}
                     </div>
-                    <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                        <table aria-label="Types de stationnement">
-                            <thead>
-                                <tr>
-                                    {% if convention|display_comments %}
-                                        {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" callback_click="refresh_opened_comments" %}
-                                    {% endif %}
-                                    <th scope="col" class="col__width--150">Type de stationnement {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--200">Nombre de stationnements {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--150">Loyer maximum en € {% include "common/form/required_field_star.html" %}</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for stationnement in stationnements %}
-                                    {% with stationnement_uuid=stationnement.uuid|slugify %}
-                                        {% with main_object_field="type_stationnement__uuid__"|add:stationnement_uuid %}
-                                            <tr id="{{main_object_field}}_group">
-                                                {% if convention|display_comments %}
-                                                    <td id="{{main_object_field}}_div">
-                                                        {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" callback_click="refresh_opened_comments" %}
+                    {% if stationnements %}
+                        <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
+                            <table aria-label="Types de stationnement">
+                                <thead>
+                                    <tr>
+                                        {% if convention|display_comments %}
+                                            {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label="Type de stationnements" callback_click="refresh_opened_comments" %}
+                                        {% endif %}
+                                        <th scope="col" class="col__width--150">Type de stationnement {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--200">Nombre de stationnements {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--150">Loyer maximum en € {% include "common/form/required_field_star.html" %}</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for stationnement in stationnements %}
+                                        {% with stationnement_uuid=stationnement.uuid|slugify %}
+                                            {% with main_object_field="type_stationnement__uuid__"|add:stationnement_uuid %}
+                                                <tr id="{{main_object_field}}_group">
+                                                    {% if convention|display_comments %}
+                                                        <td id="{{main_object_field}}_div">
+                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Type de stationnement" callback_click="refresh_opened_comments" %}
+                                                        </td>
+                                                    {% endif %}
+                                                    <td>
+                                                        {{ stationnement.get_typologie_display }}
                                                     </td>
-                                                {% endif %}
-                                                <td>
-                                                    {{ stationnement.get_typologie_display }}
-                                                </td>
-                                                <td>
-                                                    {{ stationnement.nb_stationnements }}
-                                                </td>
-                                                <td>
-                                                    {{ stationnement.loyer|floatformat:2 }}
-                                                </td>
-                                            </tr>
+                                                    <td>
+                                                        {{ stationnement.nb_stationnements }}
+                                                    </td>
+                                                    <td>
+                                                        {{ stationnement.loyer|floatformat:2 }}
+                                                    </td>
+                                                </tr>
+                                            {% endwith %}
                                         {% endwith %}
-                                    {% endwith %}
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="fr-my-2w">
+                            <p class="fr-mb-0 notes"><em>Vous n'avez indiqué aucun stationnement.</em></p>
+                            <a class="fr-mb-1w fr-link" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >Ajouter un stationnement</a>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
