--- a/templates/conventions/recapitulatif/annexes.html
+++ b/templates/conventions/recapitulatif/annexes.html
@@ -14,56 +14,63 @@
                         </div>
                         {% include "conventions/actions/goto.html" %}
                     </div>
-                    <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                        <table  aria-label="Annexes">
-                            <thead>
-                                <tr>
-                                    {% if convention|display_comments %}
-                                        {% include 'common/utils/comments_header.html' with object_name='annexe' label="Annexes" callback_click="refresh_opened_comments" %}
-                                    {% endif %}
-                                    <th scope="col" class="col__width--150">Type d'annexe {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--200">Désignation des logements {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--150">Typologie des logements {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Surface de l'annexe {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Loyer unitaire en € {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col" class="col__width--120">Loyer maximum du logement en € {% include "common/form/required_field_star.html" %}</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for annexe in annexes %}
-                                    {% with annexe_uuid=annexe.uuid|slugify %}
-                                        {% with main_object_field="annexe__uuid__"|add:annexe_uuid %}
-                                            <tr id="{{main_object_field}}_group">
-                                                {% if convention|display_comments %}
-                                                    <td id="{{main_object_field}}_div">
-                                                        {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Annexe" callback_click="refresh_opened_comments" %}
+                    {% if annexes %}
+                        <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
+                            <table aria-label="Annexes">
+                                <thead>
+                                    <tr>
+                                        {% if convention|display_comments %}
+                                            {% include 'common/utils/comments_header.html' with object_name='annexe' label="Annexes" callback_click="refresh_opened_comments" %}
+                                        {% endif %}
+                                        <th scope="col" class="col__width--150">Type d'annexe {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--200">Désignation des logements {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--150">Typologie des logements {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Surface de l'annexe {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Loyer unitaire en € {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col" class="col__width--120">Loyer maximum du logement en € {% include "common/form/required_field_star.html" %}</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for annexe in annexes %}
+                                        {% with annexe_uuid=annexe.uuid|slugify %}
+                                            {% with main_object_field="annexe__uuid__"|add:annexe_uuid %}
+                                                <tr id="{{main_object_field}}_group">
+                                                    {% if convention|display_comments %}
+                                                        <td id="{{main_object_field}}_div">
+                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Annexe" callback_click="refresh_opened_comments" %}
+                                                        </td>
+                                                    {% endif %}
+                                                    <td>
+                                                        {{ annexe.get_typologie_display }}
                                                     </td>
-                                                {% endif %}
-                                                <td>
-                                                    {{ annexe.get_typologie_display }}
-                                                </td>
-                                                <td>
-                                                    {{ annexe.logement.designation }}
-                                                </td>
-                                                <td>
-                                                    {{ annexe.logement.get_typologie_display }}
-                                                </td>
-                                                <td>
-                                                    {{ annexe.surface_hors_surface_retenue|floatformat:2 }}
-                                                </td>
-                                                <td>
-                                                    {{ annexe.loyer_par_metre_carre|floatformat:2 }}
-                                                </td>
-                                                <td>
-                                                    {{ annexe.loyer|floatformat:2 }}
-                                                </td>
-                                            </tr>
+                                                    <td>
+                                                        {{ annexe.logement.designation }}
+                                                    </td>
+                                                    <td>
+                                                        {{ annexe.logement.get_typologie_display }}
+                                                    </td>
+                                                    <td>
+                                                        {{ annexe.surface_hors_surface_retenue|floatformat:2 }}
+                                                    </td>
+                                                    <td>
+                                                        {{ annexe.loyer_par_metre_carre|floatformat:2 }}
+                                                    </td>
+                                                    <td>
+                                                        {{ annexe.loyer|floatformat:2 }}
+                                                    </td>
+                                                </tr>
+                                            {% endwith %}
                                         {% endwith %}
-                                    {% endwith %}
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="fr-my-2w">
+                            <p class="fr-mb-0 notes"><em>Vous n'avez indiqué aucune annexe.</em></p>
+                            <a class="fr-mb-1w fr-link" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >Ajouter une annexe</a>
+                        </div>
+                    {% endif %}
                     <div class="fr-grid-row fr-grid-row--gutters">
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
                             {% include "common/display_checkbox.html" with value=lot.annexe_caves label="Caves" object_field="lot__annexe_caves__"|add:lot_uuid %}
