--- a/templates/conventions/recapitulatif/financement.html
+++ b/templates/conventions/recapitulatif/financement.html
@@ -15,57 +15,64 @@
                         {% include "conventions/actions/goto.html" %}
                     </div>
                     <p class="fr-my-1w">Prêts & Subventions : </p>
-                    <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                        <table  aria-label="Prêts">
-                            <caption>Table des financements</caption>
-                            <thead>
-                                <tr>
-                                    {% if convention|display_comments %}
-                                        {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements' callback_click="refresh_opened_comments" %}
-                                    {% endif %}
-                                    <th scope="col">Numéro</th>
-                                    <th scope="col">Date d'octroi</th>
-                                    <th scope="col">Durée (en années)</th>
-                                    <th scope="col">Montant (en €) {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col">Préteur</th>
-                                    <th scope="col">Préciser le prêteur si 'Autre'</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for pret in convention.prets.all %}
-                                    {% with pret_uuid=pret.uuid|slugify %}
-                                        {% with main_object_field="pret__uuid__"|add:pret_uuid %}
-                                            <tr id="{{main_object_field}}_group">
-                                                {% if convention|display_comments %}
-                                                    <td id="{{main_object_field}}_div">
-                                                        {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Prêt ou financement" callback_click="refresh_opened_comments" %}
+                    {% if convention.prets.all %}
+                        <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
+                            <table  aria-label="Prêts">
+                                <caption>Table des financements</caption>
+                                <thead>
+                                    <tr>
+                                        {% if convention|display_comments %}
+                                            {% include 'common/utils/comments_header.html' with object_name='pret' label='Prêts et Financements' callback_click="refresh_opened_comments" %}
+                                        {% endif %}
+                                        <th scope="col">Numéro</th>
+                                        <th scope="col">Date d'octroi</th>
+                                        <th scope="col">Durée (en années)</th>
+                                        <th scope="col">Montant (en €) {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col">Préteur</th>
+                                        <th scope="col">Préciser le prêteur si 'Autre'</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for pret in convention.prets.all %}
+                                        {% with pret_uuid=pret.uuid|slugify %}
+                                            {% with main_object_field="pret__uuid__"|add:pret_uuid %}
+                                                <tr id="{{main_object_field}}_group">
+                                                    {% if convention|display_comments %}
+                                                        <td id="{{main_object_field}}_div">
+                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Prêt ou financement" callback_click="refresh_opened_comments" %}
+                                                        </td>
+                                                    {% endif %}
+                                                    <td>
+                                                        {{ pret.numero|default_if_none:'-' }}
                                                     </td>
-                                                {% endif %}
-                                                <td>
-                                                    {{ pret.numero|default_if_none:'-' }}
-                                                </td>
-                                                <td>
-                                                    {{ pret.date_octroi|default_if_none:'-' }}
-                                                </td>
-                                                <td>
-                                                    {{ pret.duree|default_if_none:'-' }}
-                                                </td>
-                                                <td>
-                                                    {{ pret.montant }}
-                                                </td>
-                                                <td>
-                                                    {{ pret.preteur }}
-                                                </td>
-                                                <td>
-                                                    {{ pret.autre }}
-                                                </td>
-                                            </tr>
+                                                    <td>
+                                                        {{ pret.date_octroi|default_if_none:'-' }}
+                                                    </td>
+                                                    <td>
+                                                        {{ pret.duree|default_if_none:'-' }}
+                                                    </td>
+                                                    <td>
+                                                        {{ pret.montant }}
+                                                    </td>
+                                                    <td>
+                                                        {{ pret.preteur }}
+                                                    </td>
+                                                    <td>
+                                                        {{ pret.autre }}
+                                                    </td>
+                                                </tr>
+                                            {% endwith %}
                                         {% endwith %}
-                                    {% endwith %}
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="fr-my-2w">
+                            <p class="fr-mb-0 notes"><em>Vous n'avez indiqué aucun financement.</em></p>
+                            <a class="fr-mb-1w fr-link" href="{% url 'conventions:financement' convention_uuid=convention.uuid %}" >Ajouter un prêt ou une subvention</a>
+                        </div>
+                    {% endif %}
                     {% include "common/display_field_if_exists.html" with label="Date de fin de la convention" value=convention.date_fin_conventionnement object_field="convention__annee_fin_conventionnement__"|add:convention_uuid %}
                     {% if convention.programme.is_foyer %}
                         {% include "common/display_listfield_if_exists.html" with label="Historique de financement public" value=convention.historique_financement_public object_field="convention__historique_financement_public__"|add:convention_uuid %}
