--- a/templates/conventions/recapitulatif/references_cadastrales.html
+++ b/templates/conventions/recapitulatif/references_cadastrales.html
@@ -18,48 +18,56 @@
                         {% endif %}
                     </div>
                     {% include "common/display_text_and_files_if_exists.html" with text=programme.reference_cadastrale|get_text_from_textfiles file_list=programme.reference_cadastrale|get_files_from_textfiles %}
-                    <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                        <table aria-label="Références cadastrales">
-                            <thead>
-                                <tr>
-                                    {% if convention|display_comments %}
-                                        {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' callback_click="refresh_opened_comments" %}
-                                    {% endif %}
-                                    <th scope="col">Section {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col">Numéro {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col">Lieudit {% include "common/form/required_field_star.html" %}</th>
-                                    <th scope="col">Surface {% include "common/form/required_field_star.html" %}</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for reference in reference_cadastrales %}
-                                    {% with reference_uuid=reference.uuid|slugify %}
-                                        {% with main_object_field="reference_cadastrale__uuid__"|add:reference_uuid %}
-                                            <tr id="{{main_object_field}}_group">
-                                                {% if convention|display_comments %}
-                                                    <td id="{{main_object_field}}_div">
-                                                        {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Référence cadastrale" callback_click="refresh_opened_comments" %}
+                    {% if reference_cadastrales %}
+                        <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
+                            <table aria-label="Références cadastrales">
+                                <thead>
+                                    <tr>
+                                        {% if convention|display_comments %}
+                                            {% include 'common/utils/comments_header.html' with object_name='reference_cadastrale' label='Références cadastrales' callback_click="refresh_opened_comments" %}
+                                        {% endif %}
+                                        <th scope="col">Section {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col">Numéro {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col">Lieudit {% include "common/form/required_field_star.html" %}</th>
+                                        <th scope="col">Surface {% include "common/form/required_field_star.html" %}</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for reference in reference_cadastrales %}
+                                        {% with reference_uuid=reference.uuid|slugify %}
+                                            {% with main_object_field="reference_cadastrale__uuid__"|add:reference_uuid %}
+                                                <tr id="{{main_object_field}}_group">
+                                                    {% if convention|display_comments %}
+                                                        <td id="{{main_object_field}}_div">
+                                                            {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Référence cadastrale" callback_click="refresh_opened_comments" %}
+                                                        </td>
+                                                    {% endif %}
+                                                    <td>
+                                                        {{ reference.section }}
                                                     </td>
-                                                {% endif %}
-                                                <td>
-                                                    {{ reference.section }}
-                                                </td>
-                                                <td>
-                                                    {{ reference.numero }}
-                                                </td>
-                                                <td>
-                                                    {{ reference.lieudit }}
-                                                </td>
-                                                <td>
-                                                    {{ reference.surface }}
-                                                </td>
-                                            </tr>
+                                                    <td>
+                                                        {{ reference.numero }}
+                                                    </td>
+                                                    <td>
+                                                        {{ reference.lieudit }}
+                                                    </td>
+                                                    <td>
+                                                        {{ reference.surface }}
+                                                    </td>
+                                                </tr>
+                                            {% endwith %}
                                         {% endwith %}
-                                    {% endwith %}
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="fr-my-2w">
+
+                            <p class="fr-mb-0 notes"><em>Vous n'avez indiqué aucune référence cadastrale.</em></p>
+                            <a class="fr-mb-1w fr-link" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}#id_reference_cadastrale_div" >Ajouter une référence cadastrale</a>
+                        </div>
+                    {% endif %}
                     {% include "common/display_text_and_files_if_exists.html" with file_list=programme.effet_relatif|get_files_from_textfiles %}
                 </div>
             </div>
