--- a/templates/conventions/recapitulatif/annexes.html
+++ b/templates/conventions/recapitulatif/annexes.html
@@ -73,19 +73,76 @@
                     {% endif %}
                     <div class="fr-grid-row fr-grid-row--gutters">
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                            {% include "common/display_checkbox.html" with value=lot.annexe_caves label="Caves" object_field="lot__annexe_caves__"|add:lot_uuid %}
-                            {% include "common/display_checkbox.html" with value=lot.annexe_soussols label="Sous-sols" object_field="lot__annexe_soussols__"|add:lot_uuid %}
-                            {% include "common/display_checkbox.html" with value=lot.annexe_remises label="Remises" object_field="lot__annexe_remises__"|add:lot_uuid %}
-                            {% include "common/display_checkbox.html" with value=lot.annexe_ateliers label="Ateliers" object_field="lot__annexe_ateliers__"|add:lot_uuid %}
-                            {% include "common/display_checkbox.html" with value=lot.annexe_sechoirs label="Séchoirs" object_field="lot__annexe_sechoirs__"|add:lot_uuid %}
-                            {% include "common/display_checkbox.html" with value=lot.annexe_celliers label="Celliers extérieurs au logement" object_field="lot__annexe_celliers__"|add:lot_uuid %}
+                            {% if lot.annexe_caves %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Caves</p>
+                            {% endif %}
+                            {% if lot.annexe_soussols %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Sous-sols</p>
+                            {% endif %}
+                            {% if lot.annexe_remises %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Remises</p>
+                            {% endif %}
+                            {% if lot.annexe_ateliers %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Ateliers</p>
+                            {% endif %}
+                            {% if lot.annexe_sechoirs %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Séchoirs</p>
+                            {% endif %}
+                            {% if lot.annexe_celliers %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Celliers extérieurs au logement</p>
+                            {% endif %}
+                            {% if lot.annexe_resserres %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Resserres</p>
+                            {% endif %}
+                            {% if lot.annexe_combles %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Combles et greniers aménageables</p>
+                            {% endif %}
+                            {% if lot.annexe_balcons %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Balcons</p>
+                            {% endif %}
+                            {% if lot.annexe_loggias %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Loggias et vérandas</p>
+                            {% endif %}
+                            {% if lot.annexe_terrasses %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w apilos-tag-ok">Terrasses</p>
+                            {% endif %}
                         </div>
+                    </div>
+                    <div class="fr-grid-row fr-grid-row--gutters">
                         <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                            {% include "common/display_checkbox.html" with value=lot.annexe_resserres label="Resserres" object_field="lot__annexe_resserres__"|add:lot_uuid %}
-                            {% include "common/display_checkbox.html" with value=lot.annexe_combles label="Combles et greniers aménageables" object_field="lot__annexe_combles__"|add:lot_uuid %}
-                            {% include "common/display_checkbox.html" with value=lot.annexe_balcons label="Balcons" object_field="lot__annexe_balcons__"|add:lot_uuid %}
-                            {% include "common/display_checkbox.html" with value=lot.annexe_loggias label="Loggias et Vérandas" object_field="lot__annexe_loggias__"|add:lot_uuid %}
-                            {% include "common/display_checkbox.html" with value=lot.annexe_terrasses label="Terrasses" sublabel="Dans la limite de 9 m2, les parties de terrasses accessibles en étage ou aménagées sur ouvrage enterré ou à moitié enterré" object_field="lot__annexe_terrasses__"|add:lot_uuid %}
+                            {% if lot.annexe_caves is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Caves</p>
+                            {% endif %}
+                            {% if lot.annexe_soussols is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Sous-sols</p>
+                            {% endif %}
+                            {% if lot.annexe_remises is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Remises</p>
+                            {% endif %}
+                            {% if lot.annexe_ateliers is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Ateliers</p>
+                            {% endif %}
+                            {% if lot.annexe_sechoirs is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Séchoirs</p>
+                            {% endif %}
+                            {% if lot.annexe_celliers is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Celliers extérieurs au logement</p>
+                            {% endif %}
+                            {% if lot.annexe_resserres is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Resserres</p>
+                            {% endif %}
+                            {% if lot.annexe_combles is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Combles et greniers aménageables</p>
+                            {% endif %}
+                            {% if lot.annexe_balcons is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Balcons</p>
+                            {% endif %}
+                            {% if lot.annexe_loggias is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Loggias et vérandas</p>
+                            {% endif %}
+                            {% if lot.annexe_terrasses is False %}
+                                <p class="fr-tag fr-mb-2w fr-mr-1w">Terrasses</p>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
