--- a/templates/conventions/recapitulatif/stationnements.html
+++ b/templates/conventions/recapitulatif/stationnements.html
@@ -59,7 +59,7 @@
                     {% else %}
                         <div class="fr-my-2w">
                             <p class="fr-mb-0 notes"><em>Vous n'avez indiqué aucun stationnement.</em></p>
-                            <a class="fr-mb-1w fr-link" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >Ajouter un stationnement</a>
+                            <a class="fr-mb-1w fr-link" href="{% url target_url convention_uuid=convention.uuid %}">Ajouter un stationnement</a>
                         </div>
                     {% endif %}
                 </div>
